Fixed astrothumbs not showing up right in IE7

--- a/styles.less
+++ b/styles.less
@@ -301,7 +301,7 @@ ul.astronauts {
 	margin:0;
 	
 	li {
-		display:inline-block;
+		display:inline;
 		
 		a {
 			display:inline-block;
